--- a/apps/dandelion-voting/arapp.json
+++ b/apps/dandelion-voting/arapp.json
@@ -29,7 +29,7 @@
     },
     "xdai": {
       "registry": "0xC2463283b05e20C9fa697A8C8647eC645146BfEe",
-      "appName": "dandelion-voting.1hive.aragonpm.eth",
+      "appName": "pnetwork-voting.aragonpm.eth",
       "wsRPC": "wss://xdai.poanetwork.dev/wss",
       "network": "xdai"
     },
