--- a/apps/dandelion-voting/package.json
+++ b/apps/dandelion-voting/package.json
@@ -22,18 +22,29 @@
   "dependencies": {
     "@1hive/apps-token-manager": "2.1.0",
     "@aragon/minime": "1.0.0",
-    "@aragon/os": "4.4.0"
+    "@aragon/os": "4.4.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "@aragon/contract-test-helpers": "0.0.1",
+    "@aragon/buidler-aragon": "0.2.12",
+    "@aragon/contract-helpers-test": "^0.1.0",
     "@aragon/hardhat-aragon": "^1.0.0",
     "@aragon/hardhat-config": "^1.0.1",
+    "@nomiclabs/buidler": "^1.4.3",
+    "@nomiclabs/buidler-etherscan": "1.3.0",
+    "@nomiclabs/buidler-ganache": "^1.3.3",
+    "@nomiclabs/buidler-truffle5": "^1.3.4",
+    "@nomiclabs/buidler-web3": "^1.3.4",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.7",
-    "ethers": "^5.5.1",
-    "hardhat": "^2.6.7",
-    "solidity-coverage": "^0.7.0-beta.3",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
+    "buidler-extract": "^1.0.0",
+    "buidler-gas-reporter": "^0.1.3",
+    "chai": "^4.2.0",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.6.5",
+    "solidity-coverage": "^0.7.9",
     "solium": "^1.2.5",
-    "web3": "^1.2.6"
+    "web3": "^1.2.11"
   }
 }
